BUG#2845 client fails to reconnect if using TCP/IP  - Use 'poll' if available  - Check that sd <= FD_SETSIZE if using 'select'  - Handle case when 'net_data_is_ready' returns -1, ie. sd > FD_SETSIZE and 'select' is used

sql/net_serv.cc:
  Use 'poll' in favor of 'select' if avaliable
  This is to avoid the limitation with 'select' only being able to handle fd's with numbers <= 1024 as default.
  If 'poll' is not available use 'select' but check that we are not having a number higher than FD_SETSIZE
  Handle the case when 'net_data_is_ready' can't check if there is data to read, since the sd number is too high